# stock-research-platform

./: .gitignore  BUSINESS_ONE_PAGER.md  Dockerfile  README.md  config.env  docker-compose.yml  example.env  render.yaml
backend/: conftest.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py  models.py  rate_limit.py  schemas.py  seed_demo_data.py  seed_universe.py
backend/app/agents/: __init__.py  chat_sdk.py  comps_agent.py  critic_agent.py  dcf_pm_adjuster.py  dcf_updater.py  deep_research.py  earnings_agent.py  earnings_qoq.py  fact_extraction.py  filing_agent.py  graph.py  influence.py  intake.py  llm.py  long_form.py  macro_agent.py  news_agent.py  news_impact_agent.py  orchestrator.py  pm_context.py  portfolio_agent.py  prompts.py  reflection_agent.py  risk_agent.py  safe_runner.py  sdk_runtime.py  sector_agents.py  sector_tools.py  social_agent.py  technical_agent.py  tools.py  valuation_agent.py
backend/app/api/: routes_admin.py  routes_chat.py  routes_comps.py  routes_data_catalog.py  routes_dcf.py  routes_health.py  routes_macro.py  routes_portfolio.py  routes_screener.py  routes_stocks.py
backend/app/cache/: __init__.py  migrations.py  snapshots.py
backend/app/data/: company_geography.json  demo_companies.json  demo_dataset.py  demo_filings.json  (+13 more)
backend/qa/: __init__.py  questions.json  run_matrix.py  tickers.json
backend/scripts/: dcf_audit.py  index_research_notes.py  llm_cost_report.py  measure_live_cost.py  migrate_sqlite_to_postgres.py  postmortem_backfill.py  smoke_test.py  validate_model_access.py
(+194 files in other folders)
