[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "alphacouncil-backend"
version = "0.1.0"
description = "AlphaCouncil: Multi-agent equity research backend"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["app"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.pytest.ini_options]
testpaths = ["app/tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
